# MPClass_Android_Jackie

./: README.md
Camera_API/: settings.gradle
Camera_API/app/: build.gradle
Camera_API/app/src/main/: AndroidManifest.xml
Camera_API/app/src/main/res/layout/: activity_main.xml
Camera_API/app/src/main/res/values/: themes.xml
Camera_API/app/src/main/res/values-night/: themes.xml
Camera_API/gradle/wrapper/: gradle-wrapper.properties
GaussianBlur/app/: build.gradle
GaussianBlur/app/src/main/: AndroidManifest.xml
GaussianBlur/app/src/main/cpp/: CMakeLists.txt  OpenCLDriver2.cpp  native-lib.cpp
GaussianBlur/app/src/main/res/layout/: activity_main.xml
GaussianBlur/app/src/main/res/values/: themes.xml
GaussianBlur/app/src/main/res/values-night/: themes.xml
GaussianBlur/gradle/wrapper/: gradle-wrapper.properties
GaussianBlurOpenCL/: settings.gradle
GaussianBlurOpenCL/app/: build.gradle
GaussianBlurOpenCL/app/src/main/: AndroidManifest.xml
GaussianBlurOpenCL/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
GaussianBlurOpenCL/app/src/main/res/values/: strings.xml  themes.xml
GaussianBlurOpenCL/app/src/main/res/values-night/: themes.xml
GaussianBlurOpenCL/gradle/wrapper/: gradle-wrapper.properties
HelloWorld_Android/app/: build.gradle
HelloWorld_Android/app/src/main/: AndroidManifest.xml
HelloWorld_Android/app/src/main/res/layout/: activity_main.xml
HelloWorld_Android/app/src/main/res/values/: strings.xml  themes.xml
HelloWorld_Android/app/src/main/res/values-night/: themes.xml
HelloWorld_Android/gradle/wrapper/: gradle-wrapper.properties
Hello_JNI/: settings.gradle
Hello_JNI/app/: build.gradle
Hello_JNI/app/src/main/: AndroidManifest.xml
Hello_JNI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Hello_JNI/app/src/main/res/values/: strings.xml  themes.xml
Hello_JNI/app/src/main/res/values-night/: themes.xml
Hello_JNI/gradle/wrapper/: gradle-wrapper.properties
LED_example/: settings.gradle
LED_example/app/: build.gradle
LED_example/app/src/main/: AndroidManifest.xml
LED_example/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  native-lib.cpp
LED_example/app/src/main/res/layout/: activity_main.xml
LED_example/app/src/main/res/values/: strings.xml  themes.xml
LED_example/app/src/main/res/values-night/: themes.xml
LED_example/gradle/wrapper/: gradle-wrapper.properties
SpiritGO_1124/: gradle.properties  settings.gradle
SpiritGO_1124/app/: build.gradle
SpiritGO_1124/app/src/main/: AndroidManifest.xml
SpiritGO_1124/app/src/main/cpp/: ButtonDriver.c  CMakeLists.txt  LEDDriver.c  OpenCLDriver.cpp  OpenCLDriver2.cpp  SegmentDriver.c  native-lib.cpp
SpiritGO_1124/app/src/main/cpp/kernel/: decision.c  hsv.c
SpiritGO_1124/app/src/main/res/layout/: activity_main.xml
SpiritGO_1124/app/src/main/res/values-night/: themes.xml
SpiritGO_1124/gradle/wrapper/: gradle-wrapper.properties
Switch_Example/: settings.gradle
Switch_Example/app/: build.gradle
Switch_Example/app/src/main/: AndroidManifest.xml
Switch_Example/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  native-lib.cpp
Switch_Example/gradle/wrapper/: gradle-wrapper.properties
segment/: settings.gradle
segment/app/: build.gradle
segment/app/src/main/: AndroidManifest.xml
segment/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  native-lib.cpp
segment/gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
